ascension fixes - batch 1

--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -285,8 +285,12 @@
 		tec_ap_require_tech_colonial_centralization:1 "$TRIGGER_FAIL$Requires the £society£ §Y$tech_colonial_centralization$§! technology."
 		tec_ap_require_tech_galactic_administration:1 "$TRIGGER_FAIL$Requires the £society£ §Y$tech_galactic_administration$§! technology."
 
+		tec_ap_require_tech_powered_exoskeletons:1 "$TRIGGER_FAIL$Requires the £engineering£ §Y$tech_powered_exoskeletons$§! technology."
 		tec_ap_require_tech_robotic_workers:1 "$TRIGGER_FAIL$Requires the £engineering£ §Y$tech_robotic_workers$§! technology."
 		tec_ap_require_tech_droid_workers:1 "$TRIGGER_FAIL$Requires the £engineering£ §Y$tech_droid_workers$§! technology."
+
+		tec_ap_require_tech_powered_exoskeletons_or_tech_administrative_ai:1 "$TRIGGER_FAIL$Requires the £engineering£ §Y$tech_powered_exoskeletons$§! or £physics£ §Y$tech_administrative_ai$§! technology."
+
 
 		tec_ap_require_tech_genome_mapping:1 "$TRIGGER_FAIL$Requires the £society£ §Y$tech_genome_mapping$§! technology."
 		tec_ap_require_tech_glandular_acclimation:1 "$TRIGGER_FAIL$Requires the £society£ §Y$tech_glandular_acclimation$§! technology."
@@ -309,7 +313,7 @@
 	ap_mind_over_matter_hive_desc:0 "$tec_loc_ap_type_mystical$ - $tec_loc_ap_type_base$\n§LOnly a fraction of the potential of the connection of our collective has been unlocked; we need to find a way to unleash it in order to materialize our thoughts, our will, as one.§!"
 	ap_mind_over_matter_hive_tooltip:0 "$tec_loc_ap_u_situation$ §H$tec_loc_situation_icon$ $situation_tec_ascension_mystical_neutral_t1_hive$§!\n- The §Y$tec_loc_situation_icon$ $situation_tec_ascension_mystical_neutral_t1_hive$§! situation will help us to unlock our latent potential. ['concept_tec_branching_paths_help_icon']"
 	# Unlocks
-	tec_ap_unlock_tech_psionic_theory:0 "\n\n$tec_loc_ap_u_technology$ §H$tech_psionic_theory$§!\n- Provides the £society£ §Y$tech_psionic_theory$§! Technology as permanent research option."
+	tec_ap_unlock_tech_psionic_theory:0 "\n\n$tec_loc_ap_u_technology$ §H$tech_psionic_theory$§!\n- Provides the £society£ §Y$tech_psionic_theory$§! Technology as permanent research option. This tech is required for further progress on $tec_loc_ap_type_mystical$ paths."
 	tec_ap_unlock_tech_telepathy:0 "\n\n$tec_loc_ap_u_technology$ §H$tech_telepathy$§!\n- Provides the £society£ §Y$tech_telepathy$§! Technology."
  # /
  # /
@@ -405,7 +409,7 @@
 
 	ap_engineered_evolution_tooltip:0 "$tec_loc_ap_u_situation$ §H$tec_loc_situation_icon$ $situation_tec_ascension_biological_neutral_t1$§!\n- The §Y$tec_loc_situation_icon$ $situation_tec_ascension_biological_neutral_t1$§! situation will help us improve the very foundation of our species. ['concept_tec_branching_paths_help_icon']"
 	# Unlocks
-	tec_ap_unlock_tech_gene_tailoring:0 "\n\n$tec_loc_ap_u_technology$ §H$tech_gene_tailoring$§!\n- Provides the £society£ §Y$tech_gene_tailoring$§! Technology as permanent research option."
+	tec_ap_unlock_tech_gene_tailoring:0 "\n\n$tec_loc_ap_u_technology$ §H$tech_gene_tailoring$§!\n- Provides the £society£ §Y$tech_gene_tailoring$§! Technology as permanent research option.. This tech is required for further progress on $tec_loc_ap_type_biological$ paths."
 	tec_ap_unlock_tech_gene_seed_purification:0 "\n\n$tec_loc_ap_u_technology$ §H$tech_gene_seed_purification$§!\n- Provides the £society£ §Y$tech_gene_seed_purification$§! Technology."
  # /
  # Genetics
@@ -507,7 +511,8 @@
 	ap_the_flesh_is_weak_base_hive_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_technoorganic_neutral_t1$§!\n- The §Y$situation_tec_ascension_technoorganic_neutral_t1$§! will help us devise a way to technologically augment our drones. ['concept_tec_branching_paths_help_icon']"
 	ap_the_flesh_is_weak_base_machine_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_technoorganic_neutral_t1$§!\n- The §Y$situation_tec_ascension_technoorganic_neutral_t1$§! will help us devise a way to further technologically augment our drones. ['concept_tec_branching_paths_help_icon']"
 
-	tec_ap_unlock_tech_neuro_quantum_links:0 "\n\n$tec_loc_ap_u_technology$ §H$tech_neuro_quantum_links$§!\n- Provides the £physics£ §Y$tech_neuro_quantum_links$§! Technology."
+	tec_ap_unlock_tech_integrated_cybernetics:0 "\n\n$tec_loc_ap_u_technology$ §H$tech_integrated_cybernetics$§!\n- Provides the £engineering£ §Y$tech_integrated_cybernetics$§! Technology. This tech is required for further progress on $tec_loc_ap_type_technological$ paths."
+	tec_ap_unlock_tech_neuro_quantum_links:0 "\n\n$tec_loc_ap_u_technology$ §H$tech_neuro_quantum_links$§!\n- Provides the £physics£ §Y$tech_neuro_quantum_links$§! Technology. This tech is required for further progress on $tec_loc_ap_type_technological$ paths."
  # /
  # Cybernetics
 	ap_the_flesh_is_weak_cybernetics:0 "Cybernetic Augmentation"
@@ -589,8 +594,8 @@
 	ap_synthetic_evolution_base_hive_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_technosynthetics_neutral_t1$§!\n- The §Y$situation_tec_ascension_technosynthetics_neutral_t1$§! situation will drive our advancements in synthetic development forward, a way to use that proficiency towards the betterment of our collective. ['concept_tec_branching_paths_help_icon']"
 	ap_synthetic_evolution_base_machine_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_technosynthetics_neutral_t1_machine$§!\n- The §Y$situation_tec_ascension_technosynthetics_neutral_t1_machine$§! situation will drive our advancements in synthetic development forward, further unlocking our potential. ['concept_tec_branching_paths_help_icon']"
 	ap_synthetic_evolution_base_robot_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_technosynthetics_neutral_t1$§!\n- The §Y$situation_tec_ascension_technosynthetics_neutral_t1$§! situation will drive our advancements in synthetic development forward, further unlocking our potential. ['concept_tec_branching_paths_help_icon']"
-	tec_ap_unlock_tech_synthetic_workers:0 "\n\n$tec_loc_ap_u_technology$ §H$tech_synthetic_workers$§!\n- Provides the £engineering£ §Y$tech_synthetic_workers$§! Technology as permanent research option."
-	tec_ap_unlock_tech_synthetic_leaders:0 "\n\n$tec_loc_ap_u_technology$ §H$tech_synthetic_leaders$§!\n- Provides the £engineering£ §Y$tech_synthetic_leaders$§! Technology."
+	tec_ap_unlock_tech_synthetic_workers:0 "\n\n$tec_loc_ap_u_technology$ §H$tech_synthetic_workers$§!\n- Provides the £engineering£ §Y$tech_synthetic_workers$§! Technology as permanent research option. This tech is required for further progress on $tec_loc_ap_type_technological$ paths."
+	tec_ap_unlock_tech_synthetic_leaders:0 "\n\n$tec_loc_ap_u_technology$ §H$tech_synthetic_leaders$§!\n- Provides the £engineering£ §Y$tech_synthetic_leaders$§! Technology. This tech is required for further progress on $tec_loc_ap_type_technological$ paths."
 	tec_ap_unlock_tech_robomodding_m:0 "\n\n$tec_loc_ap_u_technology$ §H$tech_robomodding_m$§!\n- Provides the £engineering£ §Y$tech_robomodding_m$§! Technology."
  # /
  # Synthetics
