--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -812,7 +812,7 @@
 		 	 #####			#####
 	# /
 	tradition_tec_bioware:0 "Bioware"
-	tradition_tec_bioware_desc:0 "TO DO"
+	tradition_tec_bioware_desc:0 "TODO ASCENSION."
 
 	tr_tec_bioware_adopt:0 "$tradition_tec_bioware$ Traditions"
 	tr_tec_bioware_adopt_tooltip:0 "TO DO."
@@ -838,6 +838,48 @@
 	tr_tec_bioware_6:0 "REPLACE_ME"
 	tr_tec_bioware_6_delayed:0 "REPLACE_ME"
 	tr_tec_bioware_6_tooltip:0 "REPLACE_ME"
+ # /
+
+ # Bionic Integration (B)
+ # ------------------------------------------------------------
+	### 1 > 2 vs 3 > 4 / 5 > 6 # Used by Bioware
+			 #####			#####
+		   # 1 #			# 4	#
+			 #####			#####
+		#####	#####
+		# 2A	#	2B#
+		#####	#####
+			 #####			#####
+		 	 # 3 #			# 5	#
+		 	 #####			#####
+	# /
+	tradition_tec_mechanitors:0 "Automation"
+	tradition_tec_mechanitors_desc:0 "TODO ASCENSION."
+
+	tr_tec_mechanitors_adopt:0 "$tradition_tec_mechanitors$ Traditions"
+	tr_tec_mechanitors_adopt_tooltip:0 "TO DO."
+
+	tr_tec_mechanitors_finish:0 "$tradition_tec_mechanitors$ Traditions Finished"
+	tr_tec_mechanitors_finish_tooltip:4 "TO DO.\n$TRADITIONS_FINISH_AP$"
+
+	tr_tec_mechanitors_1:0 "REPLACE_ME"
+	tr_tec_mechanitors_1_delayed:0 "REPLACE_ME"
+	tr_tec_mechanitors_1_tooltip:0 "REPLACE_ME"
+	tr_tec_mechanitors_2:0 "REPLACE_ME"
+	tr_tec_mechanitors_2_delayed:0 "REPLACE_ME"
+	tr_tec_mechanitors_2_tooltip:0 "REPLACE_ME"
+	tr_tec_mechanitors_3:0 "REPLACE_ME"
+	tr_tec_mechanitors_3_delayed:0 "REPLACE_ME"
+	tr_tec_mechanitors_3_tooltip:0 "REPLACE_ME"
+	tr_tec_mechanitors_4:0 "REPLACE_ME"
+	tr_tec_mechanitors_4_delayed:0 "REPLACE_ME"
+	tr_tec_mechanitors_4_tooltip:0 "REPLACE_ME"
+	tr_tec_mechanitors_5:0 "REPLACE_ME"
+	tr_tec_mechanitors_5_delayed:0 "REPLACE_ME"
+	tr_tec_mechanitors_5_tooltip:0 "REPLACE_ME"
+	tr_tec_mechanitors_6:0 "REPLACE_ME"
+	tr_tec_mechanitors_6_delayed:0 "REPLACE_ME"
+	tr_tec_mechanitors_6_tooltip:0 "REPLACE_ME"
  # /
 
  # Psychic Prowess (B)
