More fixes and automodding test for cyberhives

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -2332,7 +2332,7 @@
 	civic_tec_hive_brood_mutagenic:0 "§G£tec_civic_ruler£§!Mutagenic Evolvers"
 	civic_tec_hive_brood_mutagenic_noicon:0 "Mutagenic Evolvers"
 	civic_tec_hive_brood_mutagenic_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
-	civic_tec_hive_brood_mutagenic_tooltip:0 "TO DO"
+	civic_tec_hive_brood_mutagenic_tooltip:0 "TODO CIVIC unlock mutation dens which provide Permutator drones, permutator drones give 1*capital level pops a bonus to a random pop that can stack +25-50-100% base output (mutenhanced-mutevolved-mutapex drone); bonus can be lethal to the pops based on species traits"
 	# Allow Mutation Dens providing Mutalizers, Abathur-like playstyle adding bonuses/debuffs to pops as modifier (permanently, each x years evolves a pop)
 
 	# Aggro
