fix: ai auth and other minor fixes

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -3987,6 +3987,7 @@ l_english:
 
 	building_tec_planetary_node_center: "Planetary Node Center"
 	building_tec_planetary_node_center_desc: "The Planetary Node Center, a nexus of governance, houses the infrastructure of the Planetary AI Node. With computational power at its core, it coordinates resources and drives optimized production. Guiding the planet's development, it ensures prosperity under the watchful eye of artificial intelligence. A symbol of advancement, it shapes our empire's future with AI and organic ingenuity."
+	building_tec_planetary_node_center_effect: "When this building is finished, an §Y$tec_loc_ai_planetary_node$§! will be fragmented on this planet as its §YGovernor§!. You will be able to configure the newly created AI Node."
 
 
 
