Added policy so predatory consumption species can behave and not be a pest

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -1074,6 +1074,22 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	pop_modifier_trait_tec_predatory_consumption:0 "$trait_tec_predatory_consumption$"
 	pop_modifier_trait_tec_predatory_consumption_desc:0 "The strong feast on the weak, the new prey on the old"
 
+	# Drone overclock
+	policy_tec_organic_predatory_management:0 "Predator Species Management"
+	policy_tec_organic_predatory_management_desc:0 "The natural instincts of some species drive them towards violence for substainance and thriving; with some smartly allocated resources we can mitigate some of those for our own benefit."
+
+	policy_tec_organic_predatory_management_unleashed:0 "No Predator Restriction"
+	policy_tec_organic_predatory_management_unleashed_name:0 "$policy_tec_organic_predatory_management_unleashed$"
+	policy_tec_organic_predatory_management_unleashed_desc:0 "We will allow predators to take on prey freely.\n\n$tec_loc_warning$ No effects added"
+
+	policy_tec_organic_predatory_management_contained:0 "Predator Species Containment"
+	policy_tec_organic_predatory_management_contained_name:0 "$policy_tec_organic_predatory_management_contained$"
+	policy_tec_organic_predatory_management_contained_desc:0 "A selective restriction upon propagation will keep population in check and contain violence with a reasonable procreation rate.\n\n$tec_loc_warning_red$ Predatory Consumption species Growth and Assembly: §R-10%§!\n['concept_tec_predatory_consumption', §R£job_purge£ Consumption§!] effect disabled."
+
+	policy_tec_organic_predatory_management_overfed:0 "Overfed Predators"
+	policy_tec_organic_predatory_management_overfed_name:0 "$policy_tec_organic_predatory_management_overfed$"
+	policy_tec_organic_predatory_management_overfed_desc:0 "By providing more substainance to species with predator instincts, we will avoid them attacking other parts of the population.\n\n$tec_loc_warning_red$ Predatory Consumption species $tec_loc_basic_resources$ upkeep: §R+50%§!\n['concept_tec_predatory_consumption', §R£job_purge£ Consumption§!] effect disabled."
+
 	trait_tec_spore_growth:0 "Sporangic Propagation"
 	trait_tec_spore_growth_desc:0 "§LBy dispersing millions of microscopic corpuscles, of which many are able to thrive due to condition, compatibility or coincidence, this species reproduce incredibly fast.§!"
 	trait_tec_spore_growth_effect:0 "$tec_identity_trait$\n\nEach $tec_loc_pop$ increases $tec_loc_pop_growth$ on the planet by §G+$@trait_tec_spore_growth_rate_tt$%§!\n\n$mod_tec_pop_upkeep_base_add$: §R+$@trait_tec_spore_growth_upkeep$§!"
