--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -55,11 +55,11 @@
 	# Amenities use %
 	trait_tec_amenities_rugged:0 "Rugged"
 	trait_tec_amenities_rugged_desc:0 "§LThis species is completely adapted to an austere existence, trying to obtain the maximum out of even the harsher conditions with incredible determination.§!"
-	trait_tec_amenities_rugged_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §G$@trait_tec_amenities_rugged_amenities_rate_tt$%§!\nArmy Health: §G+$@trait_tec_amenities_rugged_army_rate_tt$%§!"
+	trait_tec_amenities_rugged_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §G$@trait_tec_amenities_rugged_amenities_rate_tt$%§!\nArmy Damage: §G+$@trait_tec_amenities_rugged_army_rate_tt$%§!"
 
 	trait_tec_amenities_delicate:0 "Delicate"
 	trait_tec_amenities_delicate_desc:0 "§LThe strange and fragile physio and psychology of this species makes them extremely dependant of external use of extra helping elements or basic necessities, and submit to regular maintenance checks.§!"
-	trait_tec_amenities_delicate_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@trait_tec_amenities_delicate_amenities_rate_tt$§!\nArmy Health: §R$@trait_tec_amenities_delicate_army_rate_tt$%§!"
+	trait_tec_amenities_delicate_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@trait_tec_amenities_delicate_amenities_rate_tt$§!\nArmy Damage: §R$@trait_tec_amenities_delicate_army_rate_tt$%§!"
 
 	# Amenities use add
 	trait_tec_amenities_vigorous:0 "Vigorous"
@@ -714,7 +714,7 @@
 	tec_genetic_trait_advanced:0 "§HAdvanced Genetic Trait§!"
 
 	trait_tec_gene_malleability:0 "Gene-Malleable"
-	trait_tec_gene_malleability_desc:0 "§LThe genetic composition of this species is intelligently altered to suit a myriad #of characteristics and new code without risking mutations or excessive biological stress.§!\n"
+	trait_tec_gene_malleability_desc:0 "§LThe genetic composition of this species is intelligently altered to suit a myriad of characteristics and new code without risking mutations or excessive biological stress.§!\n"
 	trait_tec_gene_malleability_effect:0 "§EFeature:§! §HMalleable Genes§!\nPer Species Trait point spent:\n- £tec_genetics_icon£ Species trait points: §G+$@trait_tec_genetic_malleability_points_rate$§!\n- $tec_loc_job$ Output: §G+$@trait_tec_genetic_malleability_output_rate_tt$%§!\n\n§ECurrent bonuses:§!"
 
 	mod_tec_gene_malleability_fake_points:0 "$species_trait_points_add$"
