gene t2 changes and fixes

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -826,6 +826,7 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	decision_tec_genetic_recombination_ongoing:0 "$TRIGGER_FAIL$An ongoing §Y£stability£ $situation_tec_ascension_genetic_recombination$§! situation is taking place."
 	decision_tec_genetic_recombination_require_genetic_archives:0 "$TRIGGER_FAIL$Requires an active §Y£building£ $building_tec_regular_genetic_archive$§!."
 	decision_tec_genetic_recombination_require_genetic_repositories:0 "$TRIGGER_FAIL$Requires an active §Y£building£ $building_tec_biohive_genetic_archive$§!."
+	decision_tec_genetic_recombination_already_all_traits:0 "$TRIGGER_FAIL$All possible (and available) traits have been researched by the genetic recombination. We may be able to obtain more traits in the future!"
 	decision_tec_genetic_recombination_tooltip:0 "Starts the §Y£stability£ $situation_tec_ascension_genetic_recombination$§! situation, allowing the upgrade of genetic perfected traits."
 
 	modifier_tec_genetic_recombination_traits:0 "Recombined Traits"
