--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -790,18 +790,18 @@
 	trait_tec_gene_automodding_t1_desc:0 "§LIngrained sets of skills manifest in this species in a dynamic way, allowing the specialization in several tasks with incredible efficiency.§!"
 	trait_tec_gene_automodding_t1_effect:0 "$automodding_trait_tooltip_all$\n\n§Y$trait_tec_gene_automodding_t1$§! picks modifiers from other unlocked gene perfection traits"
 
-	trait_tec_gene_automodding_t2:0 "§YRecombined Mastery§! (§GII§!)"
+	trait_tec_gene_automodding_t2:0 "§YRecombined Mastery§! (§YII§!)"
 	trait_tec_gene_automodding_t2_desc:0 "$trait_tec_gene_automodding_t1_desc$"
 	trait_tec_gene_automodding_t2_effect:0 "$automodding_trait_tooltip_all$\n\n§Y$trait_tec_gene_automodding_t2$§! picks modifiers from other unlocked gene perfection traits"
 
-	trait_tec_gene_automodding_t3:0 "§YPerfected Mastery§! (§GIII§!)"
+	trait_tec_gene_automodding_t3:0 "§YPerfected Mastery§! (§HIII§!)"
 	trait_tec_gene_automodding_t3_desc:0 "$trait_tec_gene_automodding_t1_desc$"
 	trait_tec_gene_automodding_t3_effect:0 "$automodding_trait_tooltip_all$\n\n§Y$trait_tec_gene_automodding_t3$§! picks modifiers from other unlocked gene perfection traits"
  # /
  # T2 normal traits
 	trait_tec_gene_genius_t1:0 "§YGenius§! (§GI§!)"
 	trait_tec_gene_genius_t1_desc:0 "§LThe intellect of this species is starting to become unmatchable, as both genetic therapies and engineering are unlocking and upgrading the potential of their brains to a capacity only them can understand.§!"
-	trait_tec_gene_genius_t1_effect:0 "$mod_negative_leader_traits_species$: §G-1§!\n$mod_leaders_upkeep_mult$: §G-10%§!\nResources from £job_researcher£ Researchers: §G+20%§!"
+	trait_tec_gene_genius_t1_effect:0 "$mod_negative_leader_traits_species$: §G-1§!\n$mod_leaders_upkeep_mult$: §G-10%§!\nResources from £job_researcher£ Researchers: §G+20%§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
 	trait_tec_gene_genius_t2:0 "§YGenius§! (§YII§!)"
 	trait_tec_gene_genius_t2_desc:0 "§LThe intellect of this species is becoming unmatchable, as both genetic therapies and engineering are unlocking and upgrading the potential of their brains to a capacity only them can understand.§!"
@@ -884,11 +884,11 @@
 	trait_tec_gene_metabolic_t3_desc:0 "$trait_tec_gene_metabolic_t1_desc$"
 	trait_tec_gene_metabolic_t3_effect:0 "$mod_planet_pops_upkeep_mult$: §G-25%§!\n$mod_planet_jobs_upkeep_mult$: §G-25%§!\n$MOD_POP_AMENITIES_USAGE_MULT$: §G-25%§!\n§G$trait_tec_gene_perfected_scaling$§!"
 	# Energy
-	trait_tec_gene_energy_t1:0 "§YTailored Wit§! (§HI§!)"
+	trait_tec_gene_energy_t1:0 "§YTailored Wit§! (§GI§!)"
 	trait_tec_gene_energy_t1_desc:0 "§LA really impressive wit drives this species towards the best technical processes regarding generation and maintenance of energy processes.§!"
 	trait_tec_gene_energy_t1_effect:0 ""
 
-	trait_tec_gene_energy_t2:0 "§YRecombined Wit§! (§HII§!)"
+	trait_tec_gene_energy_t2:0 "§YRecombined Wit§! (§YII§!)"
 	trait_tec_gene_energy_t2_desc:0 "$trait_tec_gene_energy_t1_desc$"
 	trait_tec_gene_energy_t2_effect:0 ""
 
@@ -896,11 +896,11 @@
 	trait_tec_gene_energy_t3_desc:0 "$trait_tec_gene_energy_t1_desc$"
 	trait_tec_gene_energy_t3_effect:0 "$mod_planet_jobs_energy_produces_mult$: §G+40%§!\n§G$trait_tec_gene_perfected_scaling$§!"
 	# Mining
-	trait_tec_gene_mining_t1:0 "§YTailored Mining§! (§HI§!)"
+	trait_tec_gene_mining_t1:0 "§YTailored Mining§! (§GI§!)"
 	trait_tec_gene_mining_t1_desc:0 "§LThis species is instinctively driven towards the best mineral deposits, as they have been genetically altered to do so.§!"
 	trait_tec_gene_mining_t1_effect:0 ""
 
-	trait_tec_gene_mining_t2:0 "§YRecombined Mining§! (§HII§!)"
+	trait_tec_gene_mining_t2:0 "§YRecombined Mining§! (§YII§!)"
 	trait_tec_gene_mining_t2_desc:0 "$trait_tec_gene_mining_t1_desc$"
 	trait_tec_gene_mining_t2_effect:0 ""
 
@@ -908,11 +908,11 @@
 	trait_tec_gene_mining_t3_desc:0 "$trait_tec_gene_mining_t1_desc$"
 	trait_tec_gene_mining_t3_effect:0 "$mod_planet_jobs_minerals_produces_mult$: §G+40%§!\n§G$trait_tec_gene_perfected_scaling$§!"
 	# Food
-	trait_tec_gene_farming_t1:0 "§YTailored Cultivation§! (§HI§!)"
+	trait_tec_gene_farming_t1:0 "§YTailored Cultivation§! (§GI§!)"
 	trait_tec_gene_farming_t1_desc:0 "§LA natural impulse to select the best crops, the best breeds and best ecological niches has been implanted in this species, making them excellent agro-producers.§!"
 	trait_tec_gene_farming_t1_effect:0 ""
 
-	trait_tec_gene_farming_t2:0 "§YRecombined Cultivation§! (§HII§!)"
+	trait_tec_gene_farming_t2:0 "§YRecombined Cultivation§! (§YII§!)"
 	trait_tec_gene_farming_t2_desc:0 "$trait_tec_gene_farming_t1_desc$"
 	trait_tec_gene_farming_t2_effect:0 ""
 
@@ -920,11 +920,11 @@
 	trait_tec_gene_farming_t3_desc:0 "$trait_tec_gene_farming_t1_desc$"
 	trait_tec_gene_farming_t3_effect:0 "$mod_planet_jobs_food_produces_mult$: §G+40%§!\n§G$trait_tec_gene_perfected_scaling$§!"
 	# Industry
-	trait_tec_gene_industry_t1:0 "§YTailored Manufacturing§! (§HI§!)"
+	trait_tec_gene_industry_t1:0 "§YTailored Manufacturing§! (§GI§!)"
 	trait_tec_gene_industry_t1_desc:0 "§LLiving amongst industrial fumes, able to breathe and recycle polluted air and widthstand any toxing and odd condition, this species thrive at industrial production and meticulous design of advanced elements.§!"
 	trait_tec_gene_industry_t1_effect:0 "Resources from £job_foundry£ Foundry Jobs: §G+12.5%§!\nResources from £job_artisan£ Artisan Jobs: §G+12.5%§!"
 
-	trait_tec_gene_industry_t2:0 "§YRecombined Manufacturing§! (§HII§!)"
+	trait_tec_gene_industry_t2:0 "§YRecombined Manufacturing§! (§YII§!)"
 	trait_tec_gene_industry_t2_desc:0 "$trait_tec_gene_industry_t1_desc$"
 	trait_tec_gene_industry_t2_effect:0 "Resources from £job_foundry£ Foundry Jobs: §G+17.5%§!\nResources from £job_artisan£ Artisan Jobs: §G+17.5%§!"
 
@@ -932,11 +932,11 @@
 	trait_tec_gene_industry_t3_desc:0 "$trait_tec_gene_industry_t1_desc$"
 	trait_tec_gene_industry_t3_effect:0 "Resources from £job_foundry£ Foundry Jobs: §G+20%§!\nResources from £job_artisan£ Artisan Jobs: §G+20%§!\n§G$trait_tec_gene_perfected_scaling$§!"
 	# Research
-	trait_tec_gene_research_t1:0 "§YTailored Intellect§! (§HI§!)"
+	trait_tec_gene_research_t1:0 "§YTailored Intellect§! (§GI§!)"
 	trait_tec_gene_research_t1_desc:0 "§LA sharp ingenius paired with a ever expanded creativity drive this species forward.§!"
 	trait_tec_gene_research_t1_effect:0 ""
 
-	trait_tec_gene_research_t2:0 "§YRecombined Intellect§! (§HII§!)"
+	trait_tec_gene_research_t2:0 "§YRecombined Intellect§! (§YII§!)"
 	trait_tec_gene_research_t2_desc:0 "$trait_tec_gene_research_t1_desc$"
 	trait_tec_gene_research_t2_effect:0 ""
 
@@ -944,11 +944,11 @@
 	trait_tec_gene_research_t3_desc:0 "$trait_tec_gene_research_t1_desc$"
 	trait_tec_gene_research_t3_effect:0 "$tec_loc_research_resources$ from £job£ Jobs: §G+30%§!\n§G$trait_tec_gene_perfected_scaling$§!"
 	# Unity
-	trait_tec_gene_unity_t1:0 "§YTailored Harmony§! (§HI§!)"
+	trait_tec_gene_unity_t1:0 "§YTailored Harmony§! (§GI§!)"
 	trait_tec_gene_unity_t1_desc:0 "§LThis species has an ingrained cultural sense that drive them towards harmonius sharing of thoughts and creativity.§!"
 	trait_tec_gene_unity_t1_effect:0 ""
 
-	trait_tec_gene_unity_t2:0 "§YRecombined Harmony§! (§HII§!)"
+	trait_tec_gene_unity_t2:0 "§YRecombined Harmony§! (§YII§!)"
 	trait_tec_gene_unity_t2_desc:0 "$trait_tec_gene_unity_t1_desc$"
 	trait_tec_gene_unity_t2_effect:0 ""
 
@@ -956,11 +956,11 @@
 	trait_tec_gene_unity_t3_desc:0 "$trait_tec_gene_unity_t1_desc$"
 	trait_tec_gene_unity_t3_effect:0 "$mod_planet_jobs_unity_produces_mult$: §G+30%§!\n§G$trait_tec_gene_perfected_scaling$§!"
 	# Amenities
-	trait_tec_gene_amenities_t1:0 "§YTailored Caretaking§! (§HI§!)"
+	trait_tec_gene_amenities_t1:0 "§YTailored Caretaking§! (§GI§!)"
 	trait_tec_gene_amenities_t1_desc:0 "§LExcelling at the creation of maintenance, entertainment and sustainability elements, this species thrive when it comes to keeping their society afloat.§!"
 	trait_tec_gene_amenities_t1_effect:0 ""
 
-	trait_tec_gene_amenities_t2:0 "§YRecombined Caretaking§! (§HII§!)"
+	trait_tec_gene_amenities_t2:0 "§YRecombined Caretaking§! (§YII§!)"
 	trait_tec_gene_amenities_t2_desc:0 "$trait_tec_gene_amenities_t1_desc$"
 	trait_tec_gene_amenities_t2_effect:0 ""
 
@@ -968,11 +968,11 @@
 	trait_tec_gene_amenities_t3_desc:0 "$trait_tec_gene_amenities_t1_desc$"
 	trait_tec_gene_amenities_t3_effect:0 "$mod_pop_job_amenities_mult$: §G+40%§!\n§G$trait_tec_gene_perfected_scaling$§!"
 	# Trade
-	trait_tec_gene_trade_t1:0 "§YTailored Numeracy§! (§HI§!)"
+	trait_tec_gene_trade_t1:0 "§YTailored Numeracy§! (§GI§!)"
 	trait_tec_gene_trade_t1_desc:0 "§LIntrincate calculations cross the mind of this species, allowing them to fulfill highly complex mathematical processes, specially the ones related to riches and economical development.§!"
 	trait_tec_gene_trade_t1_effect:0 ""
 
-	trait_tec_gene_trade_t2:0 "§YRecombined Numeracy§! (§HII§!)"
+	trait_tec_gene_trade_t2:0 "§YRecombined Numeracy§! (§YII§!)"
 	trait_tec_gene_trade_t2_desc:0 "$trait_tec_gene_trade_t1_desc$"
 	trait_tec_gene_trade_t2_effect:0 ""
 
