--- a/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
@@ -2173,7 +2173,7 @@ todo_ascension:0 ""
 	tec_gene_path.50125.already.unlocked.all:0 "We have unlocked all possible traits already!"
 	tec_gene_path.50125.already.unlocked.all.traits.main:0 "We have unlocked all possible Main traits already!"
 	tec_gene_path.50125.already.unlocked.all.traits.advanced:0 "We have unlocked all possible Advanced traits already!"
-	tec_gene_path.50125.already.unlocked.all.traits.basic:0 "We have unlocked all possible Advanced traits already!"
+	tec_gene_path.50125.already.unlocked.all.traits.normal:0 "We have unlocked all possible Normal traits already!"
 	tec_gene_path.50125.require.main.upgrade:0 "$TRIGGER_FAIL$§RRequires upgrading our main traits first!§!"
 	# Recombine Lotto 1
 	tec_gene_path.50925.name:0 "Genetic Recombination - Experimental I"
