--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -188,16 +188,16 @@
 
 # Tradition Requirements
 # ------------------------------------------------------------
-	tr_tec_synthetics_path_unlocked_regular: "$TRIGGER_FAIL$Requires having finished the §Y$tec_loc_unity_icon$ $tradition_synthetics$§! situation."
-	tr_tec_synthetics_path_machine_unlocked: "$TRIGGER_FAIL$Requires having finished the §Y$tec_loc_unity_icon$ $tradition_synthetics$§! situation."
-	tr_tec_psionics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the §Y$tec_loc_unity_icon$ $tradition_psionics$§! situation."
-	tr_tec_genetics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the §Y$tec_loc_unity_icon$ $tradition_genetics$§! situation."
-	tr_tec_cybernetics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the §Y$tec_loc_unity_icon$ $tradition_cybernetics$§! situation."
+	tr_tec_synthetics_path_unlocked_regular: "$TRIGGER_FAIL$Requires having finished the §Y$tec_loc_unity_icon$ $ap_synthetic_evolution$§! situation."
+	tr_tec_synthetics_path_unlocked_machine: "$TRIGGER_FAIL$Requires having finished the §Y$tec_loc_unity_icon$ $ap_synthetic_age$§! situation."
+	tr_tec_psionics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the §Y$tec_loc_unity_icon$ $ap_mind_over_matter$§! situation."
+	tr_tec_genetics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the §Y$tec_loc_unity_icon$ $ap_engineered_evolution$§! situation."
+	tr_tec_cybernetics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the §Y$tec_loc_unity_icon$ $ap_the_flesh_is_weak$§! situation."
 
-	tr_tec_biogenics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the §Y$tec_loc_unity_icon$ $tradition_tec_biogenics$§! situation."
-	tr_tec_bioware_path_unlocked: "$TRIGGER_FAIL$Requires having finished the §Y$tec_loc_unity_icon$ $tradition_tec_bioware$§! situation."
-	tr_tec_ethereals_path_unlocked: "$TRIGGER_FAIL$Requires having finished the §Y$tec_loc_unity_icon$ $tradition_tec_ethereals$§! situation."
-	tr_tec_psychics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the §Y$tec_loc_unity_icon$ $tradition_tec_psychics$§! situation."
+	tr_tec_biogenics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the §Y$tec_loc_unity_icon$ $ap_engineered_evolution$§! situation."
+	tr_tec_bioware_path_unlocked: "$TRIGGER_FAIL$Requires having finished the §Y$tec_loc_unity_icon$ $ap_the_flesh_is_weak$§! situation."
+	tr_tec_ethereals_path_unlocked: "$TRIGGER_FAIL$Requires having finished the §Y$tec_loc_unity_icon$ $ap_mind_over_matter$§! situation."
+	tr_tec_psychics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the §Y$tec_loc_unity_icon$ $ap_mind_over_matter$§! situation."
 
 
 # AP requirements and prerequisites
