--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -118,7 +118,7 @@
 	tr_tec_vanilla_psionics_psiorigin_adopt_effect:7 "Gain §Y$tech_telepathy$§! as £society£ Research option."
 
 	tr_psionics_finish:0 "Psionics Traditions Finished"
-	tr_psionics_finish_tooltip:4 "The Shroud will start influencing our species capacities at a higher level, making our psionic species gain special traits."
+	tr_psionics_finish_tooltip:4 "The Shroud will start influencing our species capacities at a higher level, making our psionic leaders gain special traits."
 	tr_psionics_finish_effect:4 ""
 
 	tr_psionics_psi_corps:0 "Psi-Corps"
@@ -131,7 +131,8 @@
 	tr_psionics_psionic_assimilation_tooltip:0 "All §Y$trait_latent_psionic$§! species will unlock their full psionic potential.\nAllows §YPsionic Assimilation§! of other species, unlocking their latent abilities."
 
 	tr_psionics_breach_shroud:0 "Rites of Infusion"
-	tr_psionics_breach_shroud_tooltip:0 "Allows §MInfused Explorations§! of the Shroud, which remove neutral outcomes and greatly reduces the chance of negative outcomes.\nTelepaths now provide an additional §G+5%§! $mod_planet_psionic_jobs_produces_mult$."
+	tr_psionics_breach_shroud_tooltip:0 "Allows §MInfused Explorations§! of the Shroud, which remove neutral outcomes and greatly reduces the chance of negative outcomes.\nPsi corps provide extra telepaths per §Y$tec_loc_planet_ascension$§! (§G+1§! per each §Y5§!)."
+	#Telepaths now provide an additional §G+5%§! $mod_planet_psionic_jobs_produces_mult$.
 
 	tr_psionics_shrouded_encryption:0 "Shrouded Communications"
 	tr_psionics_shrouded_encryption_tooltip:0 "Gains §G+10§! base Intel.\nGrants the £edict£ §MSight Beyond Sight§M Edict."
@@ -235,9 +236,9 @@
 	tradition_tec_vanilla_synthetics_desc:0 "Future is crafted from bolt to bolt, from circuit to circuit, and from data to data, all by our hand and innovation."
 
 	tr_synthetics_adopt:0 "Synthetics Traditions"
-	tr_synthetics_adopt_evolved_machineage_tooltip:0 "Allows the assimilation of any Organic or Mechanical species into new Synthetic platforms.\nPops undergoing §HAssimilation§! provide additional §Y$tec_loc_unity$§! during and after the process."
-	tr_synthetics_adopt_evolved_utopia_tooltip:0 "Allows the assimilation of any Organic or Mechanical species into new Synthetic platforms.\nPops undergoing §HAssimilation§! provide additional §Y$tec_loc_unity$§! during and after the process."
-	tr_synthetics_adopt_machine_tooltip:0 "TODO ASCENSION"
+	tr_synthetics_adopt_machineage_tooltip:0 "Mechanical leaders will gain the §HSynthetic§! trait.\n\nAllows the assimilation of any Organic or Mechanical species into new Synthetic platforms.\nPops undergoing §HAssimilation§! provide additional §Y$tec_loc_unity$§! during and after the process."
+	tr_synthetics_adopt_utopia_tooltip:0 "Mechanical leaders will gain the §HSynthetic§! trait.\n\nAllows the assimilation of any Organic or Mechanical species into new Synthetic platforms.\nPops undergoing §HAssimilation§! provide additional §Y$tec_loc_unity$§! during and after the process."
+	tr_synthetics_adopt_machine_tooltip:0 "Mechanical leaders will gain the §HSynthetic§! trait.\n\nAllows the assimilation of any Organic or Mechanical species into new Synthetic platforms.\nPops undergoing §HAssimilation§! provide additional §Y$tec_loc_unity$§! during and after the process."
 
 	tr_synthetics_finish:0 "Synthetics Traditions Finished"
 	tr_synthetics_finish_tooltip:4 "£building£ Capitals provide §G+2§! extra £job_roboticist£ Passive Assembly."
