--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -840,7 +840,7 @@
 	tr_tec_bioware_6_tooltip:0 "REPLACE_ME"
  # /
 
- # Bionic Integration (B)
+ # Automation TODO (B)
  # ------------------------------------------------------------
 	### 1 > 2 vs 3 > 4 / 5 > 6 # Used by Bioware
 			 #####			#####
@@ -881,6 +881,49 @@
 	tr_tec_mechanitors_6_delayed:0 "REPLACE_ME"
 	tr_tec_mechanitors_6_tooltip:0 "REPLACE_ME"
  # /
+
+ # Digital TODO (B)
+ # ------------------------------------------------------------
+	### 1 > 2 vs 3 > 4 / 5 > 6 # Used by Bioware
+			 #####			#####
+		   # 1 #			# 4	#
+			 #####			#####
+		#####	#####
+		# 2A	#	2B#
+		#####	#####
+			 #####			#####
+		 	 # 3 #			# 5	#
+		 	 #####			#####
+	# /
+	tradition_tec_digital:0 "Digitalization"
+	tradition_tec_digital_desc:0 "TODO ASCENSION."
+
+	tr_tec_digital_adopt:0 "$tradition_tec_digital$ Traditions"
+	tr_tec_digital_adopt_tooltip:0 "TO DO."
+
+	tr_tec_digital_finish:0 "$tradition_tec_digital$ Traditions Finished"
+	tr_tec_digital_finish_tooltip:4 "TO DO.\n$TRADITIONS_FINISH_AP$"
+
+	tr_tec_digital_1:0 "REPLACE_ME"
+	tr_tec_digital_1_delayed:0 "REPLACE_ME"
+	tr_tec_digital_1_tooltip:0 "REPLACE_ME"
+	tr_tec_digital_2:0 "REPLACE_ME"
+	tr_tec_digital_2_delayed:0 "REPLACE_ME"
+	tr_tec_digital_2_tooltip:0 "REPLACE_ME"
+	tr_tec_digital_3:0 "REPLACE_ME"
+	tr_tec_digital_3_delayed:0 "REPLACE_ME"
+	tr_tec_digital_3_tooltip:0 "REPLACE_ME"
+	tr_tec_digital_4:0 "REPLACE_ME"
+	tr_tec_digital_4_delayed:0 "REPLACE_ME"
+	tr_tec_digital_4_tooltip:0 "REPLACE_ME"
+	tr_tec_digital_5:0 "REPLACE_ME"
+	tr_tec_digital_5_delayed:0 "REPLACE_ME"
+	tr_tec_digital_5_tooltip:0 "REPLACE_ME"
+	tr_tec_digital_6:0 "REPLACE_ME"
+	tr_tec_digital_6_delayed:0 "REPLACE_ME"
+	tr_tec_digital_6_tooltip:0 "REPLACE_ME"
+ # /
+
 
  # Psychic Prowess (B)
  # ------------------------------------------------------------
